--- a/Detaylı_Python.ipynb
+++ b/Detaylı_Python.ipynb
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "680333b1",
+   "id": "60767934",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4ab43850",
+   "id": "99cbd75a",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f4e729c9",
+   "id": "2743a129",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "dab214a5",
+   "id": "20e2ad65",
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "f17bb942",
+   "id": "9743ecfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "de728759",
+   "id": "e0e0e1ef",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "f4f4e18f",
+   "id": "764728b0",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "dbd764c7",
+   "id": "a80f2758",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "d05dafae",
+   "id": "4363e54e",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "b1e6fe73",
+   "id": "24f642d3",
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "5d15c477",
+   "id": "47f1ce79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "d5641d50",
+   "id": "ca855339",
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "5977e4a7",
+   "id": "f1abf34d",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "4c9fb538",
+   "id": "13a22489",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "44676495",
+   "id": "6de997a6",
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "6e5c43cc",
+   "id": "84a709d3",
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "3374d4e1",
+   "id": "07689709",
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "e59d3a73",
+   "id": "d8a8b863",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "f82e7bc7",
+   "id": "b748f9c9",
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "abf59293",
+   "id": "adc9688e",
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "0be7228a",
+   "id": "6c861cea",
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "99482417",
+   "id": "cec6f602",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,8 +690,331 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 91,
+   "id": "6d9cd5c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2\n",
+      "3 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "v=[(1,2),(3,4)]\n",
+    "for x,y in v:\n",
+    "    print(x,y)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "6517cabc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "doja\n",
+      "eminem\n",
+      "rules\n",
+      "berzek\n",
+      "doja rules\n",
+      "eminem berzek\n"
+     ]
+    }
+   ],
+   "source": [
+    "playlist={\"doja\":\"rules\",\"eminem\":\"berzek\"}\n",
+    "for i in playlist.keys():\n",
+    "    print(i)\n",
+    "for i in playlist.values():\n",
+    "    print(i)\n",
+    "for x,y in playlist.items():\n",
+    "    print(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "0c706131",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "parayı at: 2\n",
+      "yazı geldi\n",
+      "tura geldi\n",
+      "tura gelen sayı: 1\n",
+      "yazı gelen sayı:1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "yazigiven=0\n",
+    "turagiven=0\n",
+    "para=[\"tura\",\"yazi\"]\n",
+    "atilacakPra=int(input(\"parayı at: \"))\n",
+    "while atilacakPra>0:\n",
+    "    paraUstu=random.choice(para)\n",
+    "    if paraUstu==\"tura\":\n",
+    "        turagiven+=1\n",
+    "        print(\"tura geldi\")\n",
+    "    else:\n",
+    "        yazigiven+=1\n",
+    "        print(\"yazı geldi\")\n",
+    "    atilacakPra-=1\n",
+    "print(\"tura gelen sayı: {}\\nyazı gelen sayı:{}\".format(turagiven,yazigiven))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "ddd1045c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "until when: 5\n",
+      "not prime\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3]"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n=int(input(\"until when: \"))\n",
+    "primes=[]\n",
+    "# kendisine ve 1'e sadece bölünmeli\n",
+    "for i in range(2,n):\n",
+    "    prime=True\n",
+    "    for j in range(2,i):\n",
+    "        if i%j==0:\n",
+    "            print(\"not prime\")\n",
+    "            prime=False\n",
+    "    if prime:\n",
+    "        primes.append(i)\n",
+    "primes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "fc6213e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter num: 5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 5]"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def prime(num):\n",
+    "    for i in range(2,num):\n",
+    "        if num%i==0:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "n=int(input(\"enter num: \"))\n",
+    "primes=[]\n",
+    "for i in range(2,n+1):\n",
+    "    if prime(i):\n",
+    "        primes.append(i)\n",
+    "primes  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "3453cd32",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6, 12, 18]"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums=[]\n",
+    "for i in range(1,21):\n",
+    "    if i %6==0:\n",
+    "        nums.append(i)\n",
+    "nums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "633b143b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6, 12, 18]"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [i for i in range(1,21) if i%6==0]\n",
+    "nums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "02e66604",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sena', 'samet', 'serkan', 'susam']"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "people=[\"sena\",\"samet\",\"serkan\",\"susam\",\"mert\",\"ali\"]\n",
+    "mPeople=[i for i in people if i[0]==\"s\"]\n",
+    "mPeople"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "92d04832",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n=5\n",
+    "mult=1\n",
+    "for i in range(1,n+1):\n",
+    "    mult*=i\n",
+    "mult"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "85798948",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fact(n):\n",
+    "    if n==1:\n",
+    "        return n\n",
+    "    else:\n",
+    "        return n* fact(n-1)\n",
+    "fact(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "6f53dde0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter num:1\n",
+      "how much100\n",
+      "1900\n",
+      "enter num:2\n",
+      "how much200\n",
+      "2100\n",
+      "enter num:3\n"
+     ]
+    }
+   ],
+   "source": [
+    "total=2000\n",
+    "while True:\n",
+    "    n=int(input(\"enter num:\"))\n",
+    "    if n==1:\n",
+    "        a=int(input(\"how much\"))\n",
+    "        total-=a\n",
+    "        print(total)\n",
+    "    elif n==2:\n",
+    "        a=int(input(\"how much\"))\n",
+    "        total+=a\n",
+    "        print(total)\n",
+    "    elif n==3:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0aea1dfd",
+   "id": "d996d283",
    "metadata": {},
    "outputs": [],
    "source": []
