--- a/Interview.ipynb
+++ b/Interview.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "14b636dd",
+   "id": "e5ed7f58",
    "metadata": {},
    "source": [
     "### Basic"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9032f649",
+   "id": "a5dbede0",
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "19b5acd5",
+   "id": "80586094",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a8ae8388",
+   "id": "179ea569",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3d18e182",
+   "id": "0151ae01",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7afaee8b",
+   "id": "1a796418",
    "metadata": {},
    "source": [
     "### Asal sayı"
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b84655c1",
+   "id": "501a9b8f",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ab4c07d4",
+   "id": "5bc9a55f",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b391206c",
+   "id": "70e96527",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73efa6ac",
+   "id": "bba8ac6c",
    "metadata": {},
    "source": [
     "### 1 den kullanıcının girmiş olduğu sayıya kadar olan tek ve çift sayıların toplamını ayrı ayrı bulan ve sonucu ekranda gösteren Python Örneği"
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "be7cfd93",
+   "id": "bf0f018f",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52cb138e",
+   "id": "fc689632",
    "metadata": {},
    "source": [
     "## maaş ve zam"
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "dd1c8ff9",
+   "id": "05efd242",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaba89ba",
+   "id": "a9ebcbc4",
    "metadata": {},
    "source": [
     "## sayı tahmini"
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebadb23f",
+   "id": "0b7d4e10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89aede5c",
+   "id": "7651f5fd",
    "metadata": {},
    "source": [
     "## Verilen bir tarihin yılın kaçıncı günü olduğunu bulan Python Örneği."
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "9290e791",
+   "id": "e8965e3a",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "db31d360",
+   "id": "89962d86",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "78e8510e",
+   "id": "3e2b252c",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6e03d47",
+   "id": "3bf86275",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a47b835",
+   "id": "30787095",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "b9ed30e3",
+   "id": "7e35a4b4",
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "fc879b35",
+   "id": "2ec50157",
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "b4980399",
+   "id": "7644f86d",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "75bf9fb0",
+   "id": "20345f7c",
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "275d27b8",
+   "id": "de36e40b",
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "b482fd55",
+   "id": "c306ae8a",
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "810e2b2a",
+   "id": "19418bd1",
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db4814b6",
+   "id": "2be31f3a",
    "metadata": {},
    "source": [
     "### N adet sayıya sahip bir listeden, “single list comprehension” kullanarak sadece şu değerleri içeren yeni bir liste üret:\n",
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcfc977d",
+   "id": "e66ec409",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,8 +688,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "3a06ee43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "def ebob (a,b):\n",
+    "    c=min(a,b)\n",
+    "    x=0\n",
+    "    for i in range(1,c+1):\n",
+    "        if a % (i)==0 and b%(i)==0:\n",
+    "            x=i\n",
+    "    return x\n",
+    "print(ebob(50,70))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c1b98a8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "def ekok(num1,num2):\n",
+    "    c=max(num1,num2)\n",
+    "    total=num1*num2\n",
+    "    ekok=0\n",
+    "    while total>=c:# for sayı in range(total,c+1,-1)\n",
+    "        if total%num1==0 and total %num2==0:\n",
+    "            ekok=total\n",
+    "        total-=1\n",
+    "    return ekok\n",
+    "print(ekok(20,25))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2fb846d3",
+   "id": "fa9f73ae",
    "metadata": {},
    "outputs": [],
    "source": []
